[gd_scene load_steps=4 format=2]

[ext_resource path="res://assests/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/HistBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserInterface/Histogramm.gd" type="Script" id=3]

[node name="Histogramm" type="MarginContainer"]
margin_right = 296.0
margin_bottom = 176.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 296.0
margin_bottom = 312.0
color = Color( 0.254902, 0.254902, 0.254902, 0.47451 )

[node name="Canvas" type="MarginContainer" parent="."]
margin_right = 296.0
margin_bottom = 312.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Rows" type="VBoxContainer" parent="Canvas"]
margin_left = 5.0
margin_top = 5.0
margin_right = 286.0
margin_bottom = 307.0

[node name="Bar0" parent="Canvas/Rows" instance=ExtResource( 2 )]
margin_right = 281.0

[node name="Bar1" parent="Canvas/Rows" instance=ExtResource( 2 )]
margin_top = 34.0
margin_right = 281.0
margin_bottom = 64.0

[node name="Bar2" parent="Canvas/Rows" instance=ExtResource( 2 )]
margin_top = 68.0
margin_right = 281.0
margin_bottom = 98.0

[node name="Bar3" parent="Canvas/Rows" instance=ExtResource( 2 )]
margin_top = 102.0
margin_right = 281.0
margin_bottom = 132.0

[node name="Bar4" parent="Canvas/Rows" instance=ExtResource( 2 )]
margin_top = 136.0
margin_right = 281.0
margin_bottom = 166.0

[node name="Bar5" parent="Canvas/Rows" instance=ExtResource( 2 )]
margin_top = 170.0
margin_right = 281.0
margin_bottom = 200.0

[node name="Bar6" parent="Canvas/Rows" instance=ExtResource( 2 )]
margin_top = 204.0
margin_right = 281.0
margin_bottom = 234.0

[node name="Labels" type="HBoxContainer" parent="Canvas/Rows"]
margin_top = 238.0
margin_right = 281.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Axis4" type="ColorRect" parent="Canvas/Rows/Labels"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.690196, 0.388235, 0.388235, 0 )

[node name="Axis1" type="ColorRect" parent="Canvas/Rows/Labels"]
margin_left = 34.0
margin_right = 113.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.690196, 0.388235, 0.388235, 0 )

[node name="Label" type="Label" parent="Canvas/Rows/Labels/Axis1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -14.5
margin_right = 49.0
margin_bottom = 14.5
theme = ExtResource( 1 )
text = "0.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis2" type="ColorRect" parent="Canvas/Rows/Labels"]
margin_left = 117.0
margin_right = 197.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.690196, 0.388235, 0.388235, 0 )

[node name="Label" type="Label" parent="Canvas/Rows/Labels/Axis2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -14.5
margin_right = 24.5
margin_bottom = 14.5
theme = ExtResource( 1 )
text = "0.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis3" type="ColorRect" parent="Canvas/Rows/Labels"]
margin_left = 201.0
margin_right = 281.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.690196, 0.388235, 0.388235, 0 )

[node name="Label" type="Label" parent="Canvas/Rows/Labels/Axis3"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -14.5
margin_bottom = 14.5
theme = ExtResource( 1 )
text = "0.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Legend" type="HBoxContainer" parent="Canvas/Rows"]
margin_top = 272.0
margin_right = 281.0
margin_bottom = 302.0

[node name="Empty" type="ColorRect" parent="Canvas/Rows/Legend"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.690196, 0.388235, 0.388235, 0 )

[node name="DataColor" type="ColorRect" parent="Canvas/Rows/Legend"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.721569, 0.368627, 0.368627, 1 )

[node name="DataLabel" type="ColorRect" parent="Canvas/Rows/Legend"]
margin_left = 68.0
margin_right = 155.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="Canvas/Rows/Legend/DataLabel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -14.5
margin_right = 57.0
margin_bottom = 14.5
theme = ExtResource( 1 )
text = "Data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModelColor" type="ColorRect" parent="Canvas/Rows/Legend"]
margin_left = 159.0
margin_right = 189.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.454902, 0.752941, 0.462745, 1 )

[node name="ModelLabel" type="ColorRect" parent="Canvas/Rows/Legend"]
margin_left = 193.0
margin_right = 281.0
margin_bottom = 30.0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="Canvas/Rows/Legend/ModelLabel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -14.5
margin_right = 74.0
margin_bottom = 14.5
theme = ExtResource( 1 )
text = "Model"
__meta__ = {
"_edit_use_anchors_": false
}
